--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "bootswatch": "^4.5.0",
+    "classnames": "^2.2.6",
+    "currency-formatter": "^1.5.5",
+    "primeicons": "^3.0.0-rc.1",
+    "primereact": "^4.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
